<resources>
    <string name="app_name">Calculator</string>
    <string name="delete_button">DELETE</string>
    <string name="divide_sign">÷</string>
    <string name="multiply_sign">×</string>
    <string name="subtraction_sign">-</string>
    <string name="add_sign">+</string>
    <string name="equalSign">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>